add import button and revise function to work

--- a/index.html
+++ b/index.html
@@ -755,6 +755,9 @@
       <div>
         <button class="copy-url-button">Copy this cat's URL</button>
       </div>
+      <div>
+        <button class="import-json-button">Import JSON data</button>
+      </div>
 
       <div class="sharecode-div form-row">
         <label
